--- a/.gitignore
+++ b/.gitignore
@@ -203,4 +203,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.idea/
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,react,macos,windows,visualstudiocode
